Change answer button layout to grid. Fix spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,7 +164,7 @@ p {
 
 .container { 
     width: 100vw;
-    height: 80vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -200,6 +200,13 @@ p {
     width: 100%;
 }
 
+.answer-container {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    gap: 1rem;
+    margin: 1.2rem 0;
+}
+
 /* === 3.3 Global Styles === */
 
 .hide {
@@ -207,7 +214,10 @@ p {
 }
 
 .img-box {
-    display: block;
+    display: flex;
+    position: relative;
+    margin-bottom: 1.5rem;
+
 }
 
 /*  =============
@@ -323,6 +333,6 @@ h1 {
 }
 
 #question {
-    font-size: 4rem;
+    font-size: 2.75rem;
 }
 }
